methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:4: error: Boolean does not take parameters
    forwardd(stepCount);
            ^